fixed popup overflow on firefox

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,6 +1,6 @@
 body {
-    width: 30em;
-    height: 18em;
+    width: 30rem;
+    height: 18rem;
     margin: 0;
 }
 
@@ -19,8 +19,8 @@ tr, td, th {
     justify-content: space-between;
 
     width: auto;
-    height: 5em;
-    max-width: 35em;
+    height: 5rem;
+    max-width: 30rem;
     padding: 0.5em 1em 1em 1em;
 
     background-color: #333333;
@@ -28,6 +28,7 @@ tr, td, th {
 
 .logo {
     order: 0;
+    max-width: 50%;
 }
 
 .logo img {
@@ -54,7 +55,7 @@ tr, td, th {
 }
 
 .main-container {
-    padding: 0.5em;
+    margin: 0.5em;
 }
 
 .language-select-container {
